--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "Chatu",
+  "type": "module",
   "version": "1.0.0",
   "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^6.7.5",
+    "nodemon": "^2.0.20"
+  },
+  "scripts": {
+       "dev":"nodemon ./Backend/app.js"
   }
 }
