--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "Chatu",
   "type": "module",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^6.7.5",
     "nodemon": "^2.0.20"
   },
   "scripts": {
-       "dev":"nodemon ./Backend/app.js"
+       "dev_back":"nodemon ./Backend/app.js",
+       "dev_front":"nodemon ./Frontend/index.html"
   }
 }
