--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "Chatu",
+  "name": "chatu",
   "type": "module",
   "version": "0.0.1",
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^6.7.5",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "dev_back": "nodemon backend/app.js",
