--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "dev_back": "nodemon backend/app.js",
-    "dev_front": "cd frontend && npm run start"
+    "dev_back": "../node_modules/.bin/nodemon backend/app.js",
+    "dev_front": "cd ../frontend && npm run start"
   }
 }
