--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,6 @@
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "dev_back": "../node_modules/.bin/nodemon backend/app.js",
-    "dev_front": "cd ../frontend && npm run start"
+    "dev": "nodemon ./app.js"
   }
 }
