--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "type": "module",
   "version": "0.0.1",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
     "nodemon": "^2.0.20"
   },
