--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 # node folder
 
 node_modules
+dist
+dist-ssr
+*.local
 
 # Ract.js
 
@@ -39,3 +42,18 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Logs
+logs
+*.log
+pnpm-debug.log*
+lerna-debug.log*
