--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.5",
     "react-router-dom": "^6.6.0",
@@ -21,7 +22,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "vite": "^4.0.0"
   }
 }
