--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
